Home slider issues corrected

--- a/index.html
+++ b/index.html
@@ -198,6 +198,48 @@
 				<div class="swiper-button-prev"><i class="fas fa-arrow-left-long"></i></div>
 				<div class="swiper-button-next"><i class="fas fa-arrow-right-long"></i></div>
 			</section>
+
+			<!--Stats-->
+			<section id="stats">
+				<div class="container grid lg:grid-cols-4 gap-4">
+					<div class="stat flex flex-col justify-between relative p-2">
+						<img
+							src="./assets/images/footer-bg.jpeg"
+							alt="bg"
+							class="bg-image absolute top-0 left-0 w-full h-full" />
+						<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+						<!--Content-->
+					</div>
+					<div class="stat flex flex-col justify-between relative p-2">
+						<img
+							src="./assets/images/footer-bg.jpeg"
+							alt="bg"
+							class="bg absolute top-0 left-0 w-full h-full" />
+						<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+						<!--Content-->
+					</div>
+					<div class="stat flex flex-col justify-between relative p-2">
+						<img
+							src="./assets/images/footer-bg.jpeg"
+							alt="bg"
+							class="bg absolute top-0 left-0 w-full h-full" />
+						<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+						<!--Content-->
+					</div>
+					<div class="stat flex flex-col justify-between relative p-2">
+						<img
+							src="./assets/images/footer-bg.jpeg"
+							alt="bg"
+							class="bg absolute top-0 left-0 w-full h-full" />
+						<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+						<!--Content-->
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<!--Footer-->
