Slider errors 2 corrected

--- a/index.html
+++ b/index.html
@@ -185,8 +185,13 @@
 								accessible healthcare to most Kenyans.
 							</p>
 							<div class="buttons">
-								<a href="#" class="btn about-us">About Us</a>
-								<a href="#" class="btn our-services">Our Services</a>
+								<a href="#" class="btn-sm about-us flex items-center"
+									>About Us <img src="./assets/images/arrow-circle-light.png" alt="arrow-circle"
+								/></a>
+								<a href="#" class="btn-sm our-services flex items-center"
+									>Our Services
+									<img src="./assets/images/arrow-circle-light.png" alt="arrow-circle"
+								/></a>
 							</div>
 						</div>
 						<div class="image-container">
