--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 						<li class="menu-link menu-item-has-children">
 							<a href="javascript:void(0)">Our Locations</a>
 							<ul class="sub-menu">
-								<li class="menu-link"><a href="#">Location 1</a></li>
-								<li class="menu-link"><a href="#">Location 2</a></li>
+								<li class="menu-link"><a href="./locations.html">Location 1</a></li>
+								<li class="menu-link"><a href="./locations.html">Location 2</a></li>
 							</ul>
 						</li>
 
@@ -116,8 +116,8 @@
 					<li class="menu-link menu-item-has-children">
 						<a href="javascript:void(0)">Our Locations</a>
 						<ul class="sub-menu">
-							<li class="menu-link"><a href="#">Location 1</a></li>
-							<li class="menu-link"><a href="#">Location 2</a></li>
+							<li class="menu-link"><a href="./locations.html">Location 1</a></li>
+							<li class="menu-link"><a href="./locations.html">Location 2</a></li>
 						</ul>
 					</li>
 
@@ -566,11 +566,11 @@
 						<div class="ft-links flex flex-col justify-between">
 							<div class="links block">
 								<h6>Connect</h6>
-								<a href="#" class="link flex items-center">
+								<a href="./contact.html" class="link flex items-center">
 									<img src="./assets/images/check-all.png" alt="check-all" />
 									<p class="ml-2">Contact Us</p>
 								</a>
-								<a href="#" class="link flex items-center">
+								<a href="/news.html" class="link flex items-center">
 									<img src="./assets/images/check-all.png" alt="check-all" />
 									<p class="ml-2">News & Media</p>
 								</a>
@@ -582,7 +582,7 @@
 
 							<div class="links block">
 								<h6>Join Our Team</h6>
-								<a href="#" class="link flex items-center">
+								<a href="./careers.html" class="link flex items-center">
 									<img src="./assets/images/check-all.png" alt="check-all" />
 									<p class="ml-2">Careers</p>
 								</a>
