About and service page updtes

--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
 			<section id="common-banner" class="relative">
 				<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
-				<div class="container flex items-center justify-between">
+				<div class="container flex lg:flex-row flex-col items-center justify-between">
 					<div class="content" style="z-index: 99">
 						<h5 style="z-index: 5">YOUR CARING HEALTHCARE PARTNER</h5>
 						<h1 style="z-index: 5" class="mt-2">About Us</h1>
@@ -162,7 +162,113 @@
 			</section>
 
 			<!--About Intro-->
-			<section id="about-details"></section>
+			<section id="about-details">
+				<div class="container flex items-center justify-between">
+					<div class="image-wrapper">
+						<img src="./assets/images/about images.png" alt="about-image" />
+					</div>
+					<div class="content">
+						<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
+						<h2 class="mt-2">About Equity Afia</h2>
+						<p class="mt-3">
+							We are a group of qualified and experienced doctors who have come together as a
+							network of medical entrepreneurs with the aim of providing high quality, affordable
+							and accessible healthcare to the majority of Kenyans. Meet our able team on ground to
+							serve you.
+						</p>
+						<div class="values flex items-start justify-between mt-4">
+							<div class="value">
+								<img src="./assets/images/mission-icon.png" alt="value-image" />
+								<h6 class="mt-2 mb-1">Our Mission</h6>
+								<p>
+									We provide access to inclusive Quality Healthcare to enable our people lead
+									productive lives
+								</p>
+							</div>
+							<div class="value">
+								<img src="./assets/images/vision-img.png" alt="value-image" />
+								<h6 class="mt-2 mb-1">Our Vision</h6>
+								<p>To champion Affordable and Accessible healthcare in Africa</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!--Core Values Section-->
+			<section id="core-values">
+				<img
+					src="./assets/images/core-values-bg.jfif"
+					alt="footer-bg-image"
+					class="bg-image absolute top-0 left-0 w-full h-full" />
+				<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+				<div class="container flex flex-col items-center">
+					<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
+					<h2 class="mt-2">Core Values</h2>
+					<div class="values-grid grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 mt-10">
+						<div class="value flex flex-col items-center justify-center">
+							<span>C</span>
+							<p>Caring</p>
+						</div>
+						<div class="value flex flex-col items-center justify-center">
+							<span>H</span>
+							<p>Honesty & Trust</p>
+						</div>
+						<div class="value flex flex-col items-center justify-center">
+							<span>A</span>
+							<p>Accountabilty</p>
+						</div>
+						<div class="value flex flex-col items-center justify-center">
+							<span>M</span>
+							<p>Mutual Respect</p>
+						</div>
+					</div>
+					<div class="values-grid grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 lg:mt-5">
+						<div class="value flex flex-col items-center justify-center">
+							<span>P</span>
+							<p>Professional Ethics</p>
+						</div>
+						<div class="value flex flex-col items-center justify-center">
+							<span>I</span>
+							<p>Integrity</p>
+						</div>
+						<div class="value flex flex-col items-center justify-center">
+							<span>O</span>
+							<p>Optimum Quality</p>
+						</div>
+						<div class="value flex flex-col items-center justify-center">
+							<span>N</span>
+							<p>Non-Maleficence</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!--Approach Section-->
+			<section id="approach" class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1">
+				<div class="image-wrapper">
+					<img src="./assets/images/new-mother-img.jfif" alt="approach-image" />
+				</div>
+
+				<div class="content h-full flex flex-col justify-center">
+					<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
+					<h2 class="mt-1">Our Approach</h2>
+					<p class="mt-2">
+						Equity Afia is a sustainable, integrated health model that is using franchising
+						principles to train and monitor a network of Medical-Entrepreneurs to provide
+						standardized, quality and affordable healthcare services throughout Kenya. Equity Afia
+						plans to provide comprehensive outpatient services through an estimated 300 outpatient
+						health facilities over the next few years. Our main goal is to ensure sustained
+						improvement of the health and well-being of Kenyans by increasing access to and
+						utilization of quality, affordable and standardized healthcare
+					</p>
+					<a href="#" class="btn-sm about-us flex items-center mt-6"
+						>Explore Our Services
+						<img src="./assets/images/arrow-circle-light.png" alt="arrow-circle"
+					/></a>
+				</div>
+			</section>
 		</main>
 
 		<!--Footer-->
