--- a/services.html
+++ b/services.html
@@ -61,8 +61,8 @@
 						<li class="menu-link menu-item-has-children">
 							<a href="javascript:void(0)">Our Locations</a>
 							<ul class="sub-menu">
-								<li class="menu-link"><a href="#">Location 1</a></li>
-								<li class="menu-link"><a href="#">Location 2</a></li>
+								<li class="menu-link"><a href="./locations.html">Location 1</a></li>
+								<li class="menu-link"><a href="./locations.html">Location 2</a></li>
 							</ul>
 						</li>
 
@@ -116,8 +116,8 @@
 					<li class="menu-link menu-item-has-children">
 						<a href="javascript:void(0)">Our Locations</a>
 						<ul class="sub-menu">
-							<li class="menu-link"><a href="#">Location 1</a></li>
-							<li class="menu-link"><a href="#">Location 2</a></li>
+							<li class="menu-link"><a href="./locations.html">Location 1</a></li>
+							<li class="menu-link"><a href="./locations.html">Location 2</a></li>
 						</ul>
 					</li>
 
@@ -141,7 +141,213 @@
 		</div>
 
 		<!--Page Content-->
-		<main></main>
+		<main>
+			<!--Common Banner-->
+			<section id="common-banner" class="relative">
+				<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+				<div class="container flex items-center justify-between">
+					<div class="content" style="z-index: 99">
+						<h5 style="z-index: 5">YOUR CARING HEALTHCARE PARTNER</h5>
+						<h1 style="z-index: 5" class="mt-2">Our Services</h1>
+					</div>
+					<div class="image-wrapper">
+						<img
+							src="./assets/images/services-banner-image.png"
+							alt="about-banner-image"
+							class="banner-image"
+							style="z-index: 5" />
+					</div>
+				</div>
+			</section>
+
+			<!--Services Content-->
+			<section id="services-content">
+				<div class="container">
+					<div class="filter-section flex justify-between items-end">
+						<p>
+							Lorem ipsum dolor sit amet consectetur. At faucibus eget convallis habitasse luctus.
+							Velit donec quam ridiculus nullam ac nisl faucibus. Augue diam egestas hac ac
+							adipiscing elementum imperdiet suspendisse lectus.
+						</p>
+
+						<div class="filter-items"></div>
+					</div>
+
+					<div
+						class="services-grid grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-8 gap-6 mt-8">
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+						<div class="service relative flex items-end">
+							<img
+								src="./assets/images/service-img-1.jpg"
+								alt="footer-bg-image"
+								class="service-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<div class="w-full flex justify-between items-center">
+								<h5>Optical Services</h5>
+								<a href="./service.html" class="flex items-center justify-center"
+									><i class="fas fa-arrow-right-long"></i
+								></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 
 		<!--Footer-->
 		<footer>
@@ -257,11 +463,11 @@
 						<div class="ft-links flex flex-col justify-between">
 							<div class="links block">
 								<h6>Connect</h6>
-								<a href="#" class="link flex items-center">
+								<a href="./contact.html" class="link flex items-center">
 									<img src="./assets/images/check-all.png" alt="check-all" />
 									<p class="ml-2">Contact Us</p>
 								</a>
-								<a href="#" class="link flex items-center">
+								<a href="/news.html" class="link flex items-center">
 									<img src="./assets/images/check-all.png" alt="check-all" />
 									<p class="ml-2">News & Media</p>
 								</a>
@@ -273,7 +479,7 @@
 
 							<div class="links block">
 								<h6>Join Our Team</h6>
-								<a href="#" class="link flex items-center">
+								<a href="./careers.html" class="link flex items-center">
 									<img src="./assets/images/check-all.png" alt="check-all" />
 									<p class="ml-2">Careers</p>
 								</a>
