New Pages Added

--- a/careers.html
+++ b/careers.html
@@ -149,11 +149,11 @@
 				<div class="container flex items-center justify-between">
 					<div class="content" style="z-index: 99">
 						<h5 style="z-index: 5">YOUR CARING HEALTHCARE PARTNER</h5>
-						<h1 style="z-index: 5" class="mt-2">About Us</h1>
+						<h1 style="z-index: 5" class="mt-2">Join an Excellent Team</h1>
 					</div>
 					<div class="image-wrapper">
 						<img
-							src="./assets/images/about-banner-image.png"
+							src="./assets/images/career-banner.png"
 							alt="about-banner-image"
 							class="banner-image"
 							style="z-index: 5" />
@@ -161,8 +161,85 @@
 				</div>
 			</section>
 
-			<!--About Intro-->
-			<section id="about-details"></section>
+			<!--Career Intro-->
+			<section id="career-intro">
+				<div class="container">
+					<p class="intro">
+						Lorem ipsum dolor sit amet consectetur. Arcu pretium platea cursus accumsan. Pretium
+						morbi aliquet gravida id. Sapien quisque phasellus egestas sem potenti et facilisi
+						tincidunt. Pharetra amet urna amet fermentum proin elementum integer. Luctus dui et
+						neque varius. Massa semper dictum metus dictumst sapien nunc. Nisl fames nisl vehicula
+						amet. Pharetra eu sit quis habitant lobortis a vel faucibus laoreet. Quis montes diam
+						nec nulla maecenas netus. Integer tortor imperdiet quis cras. Suscipit scelerisque
+						mattis dictum nulla orci odio integer neque. Congue nulla dui interdum viverra nulla
+						proin vitae nunc.
+					</p>
+					<a href="#" class="btn-sm about-us flex items-center lg:my-8 md-my-4 my-4">Open Vacancies</a>
+
+					<div class="reasons grid lg:grid-cols-4 md:grid-cols-2 lg:gap-12 md:gap-6 gap-3">
+						<div class="reason flex flex-col justify-center items-center relative p-2">
+							<img
+								src="./assets/images/footer-bg.jpeg"
+								alt="bg"
+								class="bg-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<!--Content-->
+							<img src="./assets/images/user-group.png" alt="reason-icon" class="reason-icon" />
+							<h6>Be Part of A team</h4>
+						</div>
+						<div class="reason flex flex-col justify-center items-center relative p-2">
+							<img
+								src="./assets/images/footer-bg.jpeg"
+								alt="bg"
+								class="bg-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<!--Content-->
+							<img src="./assets/images/user-group.png" alt="reason-icon" class="reason-icon" />
+							<h6>Competitive Pay</h4>
+						</div>
+						<div class="reason flex flex-col justify-center items-center relative p-2">
+							<img
+								src="./assets/images/footer-bg.jpeg"
+								alt="bg"
+								class="bg-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<!--Content-->
+							<img src="./assets/images/user-group.png" alt="reason-icon" class="reason-icon" />
+							<h6>Retain Employees</h4>
+						</div>
+						<div class="reason flex flex-col justify-center items-center relative p-2">
+							<img
+								src="./assets/images/footer-bg.jpeg"
+								alt="bg"
+								class="bg-image absolute top-0 left-0 w-full h-full" />
+							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+							<!--Content-->
+							<img src="./assets/images/user-group.png" alt="reason-icon" class="reason-icon" />
+							<h6>Building Careers</h4>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!--Work Section-->
+			<section id="work" class="relative">
+				<img
+					src="./assets/images/work-image.jpg"
+					alt="footer-bg-image"
+					class="bg-image absolute top-0 left-0 w-full h-full" />
+				<div class="overlay absolute top-0 left-0 w-full h-full"></div>
+
+				<a href="#" class="play-btn absolute flex flex-col items-center justify-center"><img src="./assets/images/play btn.png" alt="play-btn"><p>Play Me</p></a>
+
+				<div class="container">
+					<h2>A Glimpse of Equity Afia Work Life</h2>
+					<p class="lg:mt-4 mt-2">Lorem ipsum dolor sit amet consectetur. Orci adipiscing mi facilisi augue diam. Feugiat facilisi habitant quis tincidunt. Auctor at consectetur a neque aliquam. Aliquet eu tellus vestibulum tempus tortor proin. Enim blandit sem arcu sed neque nisl massa elit. Lorem neque eros dolor vitae feugiat egestas diam bibendum. Sit tortor non sit condimentum egestas quis vitae mi erat. Congue habitant elementum ornare consectetur. Vitae facilisi elit volutpat faucibus tristique sagittis. Molestie felis maecenas quam sodales vel quam ullamcorper eget.</p>
+				</div>
+			</section>
 		</main>
 
 		<!--Footer-->
