--- a/partners.html
+++ b/partners.html
@@ -149,11 +149,11 @@
 				<div class="container flex items-center justify-between">
 					<div class="content" style="z-index: 99">
 						<h5 style="z-index: 5">YOUR CARING HEALTHCARE PARTNER</h5>
-						<h1 style="z-index: 5" class="mt-2">About Us</h1>
+						<h1 style="z-index: 5" class="mt-2">Our Partners</h1>
 					</div>
 					<div class="image-wrapper">
 						<img
-							src="./assets/images/about-banner-image.png"
+							src="./assets/images/partners-banner-image.png"
 							alt="about-banner-image"
 							class="banner-image"
 							style="z-index: 5" />
@@ -161,8 +161,56 @@
 				</div>
 			</section>
 
-			<!--About Intro-->
-			<section id="about-details"></section>
+			<!--Partners Grid-->
+			<section id="partner-grid">
+				<div class="container">
+					<div
+						class="filter-section flex flex-col lg:flex-row lg:justify-between lg:items-end space-y-5 lg:space-y-0">
+						<p class="intro">
+							Lorem ipsum dolor sit amet consectetur. At faucibus eget convallis habitasse luctus.
+							Velit donec quam ridiculus nullam ac nisl faucibus. Augue diam egestas hac ac
+							adipiscing elementum imperdiet suspendisse lectus.
+						</p>
+
+						<div class="filter-items flex items-center">
+							<h6 class="lg:mr-12 md:mr-6 mr-4">Filter By</h6>
+							<div class="items flex items-center">
+								<span class="item flex items-center">
+									<p class="mr-2">Country</p>
+									<i class="fas fa-angle-down"></i>
+								</span>
+								<span class="item flex items-center">
+									<p>Filter</p>
+								</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="partners grid lg:grid-cols-6 md:grid-cols-4 grid-cols-2 gap-2 mt-8">
+						<img src="./assets/images/partner 1.png" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 2.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 3.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 4.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 5.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 6.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 7.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 8.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 9.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 10.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 11.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 12.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 13.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 14.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 15.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 16.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 17.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 18.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 19.jpg" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 20.png" alt="partner-image" class="partner" />
+						<img src="./assets/images/partner 21.jpg" alt="partner-image" class="partner" />
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<!--Footer-->
