--- a/services.html
+++ b/services.html
@@ -165,13 +165,28 @@
 			<section id="services-content">
 				<div class="container">
 					<div class="filter-section flex justify-between items-end">
-						<p>
+						<p class="intro">
 							Lorem ipsum dolor sit amet consectetur. At faucibus eget convallis habitasse luctus.
 							Velit donec quam ridiculus nullam ac nisl faucibus. Augue diam egestas hac ac
 							adipiscing elementum imperdiet suspendisse lectus.
 						</p>
 
-						<div class="filter-items"></div>
+						<div class="filter-items flex items-center">
+							<h6 class="lg:mr-12 md:mr-6 mr-4">Filter By</h6>
+							<div class="items flex items-center">
+								<span class="item flex items-center">
+									<p class="mr-2">Country</p>
+									<i class="fas fa-angle-down"></i>
+								</span>
+								<span class="item flex items-center mx-3">
+									<p class="mr-2">County</p>
+									<i class="fas fa-angle-down"></i>
+								</span>
+								<span class="item flex items-center">
+									<p>Filter</p>
+								</span>
+							</div>
+						</div>
 					</div>
 
 					<div
@@ -192,13 +207,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-2.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Pregnancy & Antenatal Care</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -206,13 +221,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-3.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Vaccine Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -220,13 +235,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-4.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Dental Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -234,13 +249,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-5.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Postnatal Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -248,13 +263,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-6.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Pharmacy</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -262,13 +277,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-7.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Gynaecological Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -276,13 +291,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-8.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Physiotherapy Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -290,13 +305,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-9.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Family Planning Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -304,13 +319,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-10.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Paediatric Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -318,13 +333,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-11.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Orthopaedic Services</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
@@ -332,13 +347,13 @@
 						</div>
 						<div class="service relative flex items-end">
 							<img
-								src="./assets/images/service-img-1.jpg"
+								src="./assets/images/service-img-12.jpg"
 								alt="footer-bg-image"
 								class="service-image absolute top-0 left-0 w-full h-full" />
 							<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
 							<div class="w-full flex justify-between items-center">
-								<h5>Optical Services</h5>
+								<h5>Antenatal Care</h5>
 								<a href="./service.html" class="flex items-center justify-center"
 									><i class="fas fa-arrow-right-long"></i
 								></a>
