--- a/service.html
+++ b/service.html
@@ -149,11 +149,11 @@
 				<div class="container flex items-center justify-between">
 					<div class="content" style="z-index: 99">
 						<h5 style="z-index: 5">YOUR CARING HEALTHCARE PARTNER</h5>
-						<h1 style="z-index: 5" class="mt-2">About Us</h1>
+						<h1 style="z-index: 5" class="mt-2">Optical Services</h1>
 					</div>
 					<div class="image-wrapper">
 						<img
-							src="./assets/images/about-banner-image.png"
+							src="./assets/images/service.png"
 							alt="about-banner-image"
 							class="banner-image"
 							style="z-index: 5" />
@@ -161,8 +161,92 @@
 				</div>
 			</section>
 
-			<!--About Intro-->
-			<section id="about-details"></section>
+			<!--Service Intro-->
+			<section id="service-item-details">
+				<div class="container flex items-center justify-between">
+					<div class="image-wrapper">
+						<img src="./assets/images/single-service-image.jpg" alt="service-image" />
+					</div>
+
+					<div class="content">
+						<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
+						<h2>Equity Optical</h2>
+						<p class="mt-4">
+							Lorem ipsum dolor sit amet consectetur. At faucibus eget convallis habitasse luctus.
+							Velit donec quam ridiculus nullam ac nisl faucibus. Augue diam egestas hac ac
+							adipiscing elementum imperdiet suspendisse lectus.
+						</p>
+						<p class="mt-4">
+							Lorem ipsum dolor sit amet consectetur. At faucibus eget convallis habitasse luctus.
+							Velit donec quam ridiculus nullam ac nisl faucibus. Augue diam egestas hac ac
+							adipiscing elementum imperdiet suspendisse lectus.
+						</p>
+						<div class="stats flex justify-between items-start mt-6">
+							<div class="stat">
+								<p class="number">100</p>
+								<p class="title">Procedures Successfully Completed</p>
+							</div>
+							<div class="stat">
+								<p class="number">100</p>
+								<p class="title">Professionals at Your Service</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!--Service Features-->
+			<section id="service-features">
+				<div class="container flex items-center justify-between">
+					<div class="intro">
+						<h2>Lorem ipsum dolor sit amet.</h2>
+						<p class="mt-2">
+							Lorem ipsum dolor sit amet consectetur. Dictum pellentesque viverra lorem diam sed
+							vitae amet.
+						</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+					<div class="feature">
+						<img src="./assets/images/typcn_eye.png" alt="eye" />
+						<h6>Normal Check-up</h6>
+						<p>Lorem ipsum dolor sit amet pellentesque viverra</p>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<!--Footer-->
